fix: fixed footer overlap

--- a/bootcamp-milestone-2/src/components/footer.module.css
+++ b/bootcamp-milestone-2/src/components/footer.module.css
@@ -4,7 +4,7 @@
     align-items: center;
     background-color: var(--cg-cyan);
     color: var(--cg-white);
-    position: absolute;
+    position: static;
     bottom: 0;
     width: 100%;
 }
